remove get_user_privileges and update docs
